copy project form beta1

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,7 @@ plugins {
 
 android {
     namespace 'com.farmo'
-    compileSdk {
-        version = release(36)
-    }
+    compileSdk 36
 
     defaultConfig {
         applicationId "com.farmo"
@@ -31,10 +29,23 @@ android {
 }
 
 dependencies {
+    // Core Libraries
+    implementation libs.core.ktx
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.recyclerview
+    implementation libs.fragment
+    implementation libs.cardview
+
+    // Retrofit & Gson
+    implementation libs.retrofit
+    implementation libs.converter.gson
+    implementation libs.gson
+    implementation libs.logging.interceptor
+
+    // Testing
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
